[package]
name = "customersapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
mongodb = { version = "2.0.2", default_features = false, features = ["sync"] }
serde = "1.0.130"
bson = { version = "2.0.1", features = ["chrono-0_4"] }
